添加elevue  pc端开发

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -14,3 +14,9 @@ cursor: pointer;
 a:hover, a:hover{
 opacity:0.9;
 }
+
+.demo-flex {
+  display: flex;
+  transition: all .5s;
+  user-select: none;
+}
