--- a/src/pages/style.less
+++ b/src/pages/style.less
@@ -2,23 +2,8 @@
 #app {
     text-align: center;
     color: #2c3e50;
-    margin-top: 60px;
-    h2{
-        color:#f00;
-    }
-
-    h1, h2 {
-        font-weight: normal;
-    }
-    ul {
-        list-style-type: none;
-        padding: 0;
-    }
-    li {
-        text-align: left;
-        margin: 0 10px;
-    }
-    a {
-        color: #42b983;
+    
+    .el-menu--horizontal .nav-item-right {
+      float: right !important;
     }
 }
