--- a/src/pages/style.less
+++ b/src/pages/style.less
@@ -1,9 +1,25 @@
 
 #app {
     text-align: center;
-    color: #2c3e50;
-    
+
     .el-menu--horizontal .nav-item-right {
       float: right !important;
     }
+    .el-menu {
+    
+
+    .logo {
+    	position: absolute;
+    	top:15px;
+    	left: 30px;
+    	color: #FF4949;
+    	font-size: 24px;
+    }
+    }
+
+    .red-tooltip {
+    	color: #FF4949 !important;
+    	border-color: #FF4949 !important;
+    }
+    
 }
