--- a/src/pages/style.less
+++ b/src/pages/style.less
@@ -1,25 +1,5 @@
 
 #app {
-    text-align: center;
-
-    .el-menu--horizontal .nav-item-right {
-      float: right !important;
-    }
-    .el-menu {
-    
-
-    .logo {
-    	position: absolute;
-    	top:15px;
-    	left: 30px;
-    	color: #FF4949;
-    	font-size: 24px;
-    }
-    }
-
-    .red-tooltip {
-    	color: #FF4949 !important;
-    	border-color: #FF4949 !important;
-    }
-    
+	width: 100%;
+	height: 100%;
 }
