--- a/src/pages/login/style.less
+++ b/src/pages/login/style.less
@@ -45,6 +45,10 @@
           border-radius: 150px;
           margin-bottom: 50px;
         }
+        .el-autocomplete, .el-dropdown {
+          left: 50%;
+          margin-left: -175px;
+        }
   }
 
   .col-button {
