--- a/src/pages/error/style.less
+++ b/src/pages/error/style.less
@@ -1,5 +1,8 @@
 .error-page {
-	padding: 200px 0 0 0;
+	position: relative;
+	top: 50%;
+	margin-top: -60px;
+	text-align: center;
 	i {
 		font-size: 60px;
 		color: #ccc;
