--- a/src/pages/chat/home/style.less
+++ b/src/pages/chat/home/style.less
@@ -20,7 +20,7 @@
 	.content {
 		border: 0px solid #eee;
 		.person {
-			padding: 20px 20px;
+			padding: 20px 20px 20px 80px;
 			height: 140px;
 			box-sizing: border-box;
 			line-height: 100px;
