--- a/src/pages/chat/home/style.less
+++ b/src/pages/chat/home/style.less
@@ -16,7 +16,14 @@
 	     background-color: #d3dce6;
 	  }
 	}
-	
+	.el-radio-group{
+	  margin-left:10px;
+	  margin-bottom: 30px;
+	}
+	.create{
+	  margin-left:10%;
+	  width:80%;
+	}
 	.content {
 		border: 0px solid #eee;
 		.person {
