--- a/src/pages/chat/home/style.less
+++ b/src/pages/chat/home/style.less
@@ -11,7 +11,7 @@
 	  .el-carousel__item:nth-child(2n) {
 	     background-color: #99a9bf;
 	  }
-	  
+
 	  .el-carousel__item:nth-child(2n+1) {
 	     background-color: #d3dce6;
 	  }
@@ -62,7 +62,7 @@
 			    font-size: 13px;
 			    color: #999;
 			  }
-			  
+
 			  .bottom {
 			    margin-top: 13px;
 			    line-height: 12px;
@@ -83,10 +83,18 @@
 			      display: table;
 			      content: "";
 			  }
-			  
+
 			  .clearfix:after {
 			      clear: both
 			  }
 		}
+	}
+
+
+	.audio {
+		audio {
+		height: 100px;
+		width: 100%;
+	}
 	}
 }
