--- a/src/pages/login/style.less
+++ b/src/pages/login/style.less
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  background-image: url('/src/assets/img/bg.jpg');
+  background-image: url('../../assets/img/bg.jpg');
   background-size: 100% 100%;
 	.title {
     padding-top: 100px;
