--- a/src/pages/Resume/style.less
+++ b/src/pages/Resume/style.less
@@ -52,14 +52,19 @@
             }
           }
 
+          .work {
+            border-top: 1px solid #eee;
+            padding-top: 20px;
+          }
+
           p {
-            margin-bottom: 10px;
+            margin-bottom: 20px;
           }
         }
 
         .left {
           float: left;
-          margin-right: 20px;
+          width: 80px;
           font-weight: 600;
         }
         .right {
@@ -77,7 +82,9 @@
   w {
     font-weight: 600;
     color: rgb(80, 120, 140);
-
+  }
+  a {
+    color: rgb(160, 210, 240);
   }
 
   // color: rgb(80, 120, 140);
