add picture tooltip

--- a/src/pages/work/style.less
+++ b/src/pages/work/style.less
@@ -1,6 +1,5 @@
 .picture-wall{
     position: absolute;
-    background: #f3e6a5;
    
     #picture-wall1{
       
@@ -29,10 +28,16 @@
         line-height: 30px;
     }
 }
-
 .picture {
-    background: white;
-    box-shadow: 5px 5px 8px #888888;
-    margin:15px 0px 0px 0px;
-    border: 1px solid rgb(117, 117, 117);
+    cursor: pointer;
+    background: rgb(255, 255, 255);
+    box-shadow: 8px 8px 10px #868686;
+    margin: 10px 0 10px 0;
+    border: 5px solid rgb(255, 255, 255);
+    border-radius: 3px;
+}
+
+.image {
+    
+    width: 175px;
 }
