--- a/src/pages/work/style.less
+++ b/src/pages/work/style.less
@@ -1,6 +1,6 @@
 .picture-wall{
     position: absolute;
-   
+    height: auto;
     #picture-wall1{
       
         margin: 10px 0px 20px 20px;
@@ -40,4 +40,11 @@
 .image {
     
     width: 175px;
+}
+#tooltip {
+    z-index: 2000;
+    position: absolute;
+    box-shadow: 8px 8px 10px #868686;
+    border: 5px solid rgb(255, 255, 255);
+    border-radius: 3px;
 }
