--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -6,13 +6,13 @@
       float: right !important;
     }
     .el-menu {
-    
+
 
     .logo {
     	position: absolute;
     	top:15px;
     	left: 30px;
-    	color: #FF4949;
+    	color: #ffd04b;
     	font-size: 24px;
     }
     }
@@ -21,5 +21,5 @@
     	color: #FF4949 !important;
     	border-color: #FF4949 !important;
     }
-    
+
 }
