--- a/src/pages/work/style.less
+++ b/src/pages/work/style.less
@@ -43,7 +43,7 @@
 }
 #tooltip {
     z-index: 2000;
-    position: absolute;
+    position:fixed;
     box-shadow: 8px 8px 10px #868686;
     border: 5px solid rgb(255, 255, 255);
     border-radius: 3px;
