--- a/src/pages/work/style.less
+++ b/src/pages/work/style.less
@@ -1,26 +1,37 @@
 .work-page {
   width: 1050px;
+  padding: 50px 0 0 0;
   margin: 0 auto;
+  .title {
+    h2 {
+      font-size: 32px;
+    }
+    margin-bottom: 50px;
+  }
   .picture-wall{
     overflow: hidden;
+    width: 460px;
+    display: inline-block;
+    margin-right: 50px;
     span{
         line-height: 30px;
     }
   }
   .picture {
-    width: 460px;
+    width: 400px;
     cursor: pointer;
     float: left;
-    margin: 50px 50px 0 0;
+    margin-bottom: 50px;
     background: rgb(255, 255, 255);
     // box-shadow: 8px 8px 10px #868686;
-    border: 5px solid #eee;
-    border-width: 0 5px 5px 0;
-    border-radius: 3px;
+
   }
 
   .image {
     width: 100%;
+    border: 5px solid #eee;
+    border-width: 0 5px 5px 0;
+    border-radius: 3px;
   }
   #tooltip {
       z-index: 2000;
