--- a/src/pages/work/style.less
+++ b/src/pages/work/style.less
@@ -2,13 +2,15 @@
   width: 1050px;
   padding: 50px 0 0 0;
   margin: 0 auto;
+  overflow: hidden;
   .title {
     h2 {
       font-size: 32px;
     }
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
   .picture-wall{
+    float: left;
     overflow: hidden;
     width: 460px;
     display: inline-block;
