--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -1,20 +1,33 @@
 
 .header {
     text-align: center;
+    .name {
+      color: #fff;
+      position: absolute;
+      top: 20px;
+      right: 80px;
+    }
 
     .el-menu--horizontal .nav-item-right {
-      float: right !important;
+      // float: right !important;
     }
     .el-menu {
 
 
-    .logo {
-    	position: absolute;
-    	top:15px;
-    	left: 30px;
-    	color: #ffd04b;
-    	font-size: 24px;
-    }
+      .logo {
+      	// position: absolute;
+      	// top:15px;
+      	// left: 30px;
+      	color: #ffd04b;
+      	font-size: 24px;
+      }
+      .me {
+      	position: absolute;
+      	top:15px;
+      	right: 30px;
+      	fill: #fff;
+      	font-size: 24px;
+      }
     }
 
     .red-tooltip {
