--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -2,13 +2,13 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  background-image: url('../../assets/img/bg.jpg');
-  background-size: 100% 100%;
+  // background-image: url('../../assets/img/bg.jpg');
+  // background-size: 100% 100%;
 	.title {
     padding-top: 100px;
     text-align: center;
     font-size: 32px;
-    color: #fff;
+    // color: #fff;
     font-weight: normal;
     cursor: pointer;
   }
