--- a/src/pages/tag/style.less
+++ b/src/pages/tag/style.less
@@ -2,6 +2,14 @@
     width: 900px;
     margin: 100px auto auto auto ;
     height: auto;
+    .loading {
+      width: 100%;
+      text-align: center;
+      padding-top: 100px;
+      i {
+        font-size: 48px;
+      }
+    }
 }
 .head{
     float: left;
@@ -18,11 +26,11 @@
     cursor: pointer;
     float: left;
     // position: absolute;
-   
+
     height:25px;
     margin: 10px 10px 10px 10px;
     border:1px solid rgb(221, 220, 220);
     border-radius: 15px;
     padding: 3px 10px 3px 10px;
-    
+
 }
