--- a/src/pages/tag/style.less
+++ b/src/pages/tag/style.less
@@ -10,9 +10,8 @@
         font-size: 48px;
       }
     }
-}
 .head{
-    float: left;
+  overflow: hidden;
     margin-top: 20px ;
 }
 .tags{
@@ -33,4 +32,5 @@
     border-radius: 15px;
     padding: 3px 10px 3px 10px;
 
+}
 }
