--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -18,7 +18,7 @@
       	// position: absolute;
       	// top:15px;
       	// left: 30px;
-      	color: #ffd04b;
+      	// color: #ffd04b;
       	font-size: 24px;
       }
       .me {
