--- a/src/pages/tag/style.less
+++ b/src/pages/tag/style.less
@@ -1,17 +1,16 @@
 .tag{
     width: 900px;
-    margin: 100px auto auto auto ;
+    margin: 50px auto auto auto ;
     height: auto;
     .loading {
-      width: 100%;
-      text-align: center;
-      padding-top: 100px;
-      i {
-        font-size: 48px;
-      }
+      position: absolute;
+      top: 200px;
+      left: 50%;
+      padding-left: -24px;
+      font-size: 48px;
     }
 .head{
-  overflow: hidden;
+    overflow: hidden;
     margin-top: 20px ;
 }
 .tags{
@@ -24,13 +23,14 @@
     font-size:16px;
     cursor: pointer;
     float: left;
-    // position: absolute;
-
+    line-height: 24px;
     height:25px;
-    margin: 10px 10px 10px 10px;
+    margin: 10px;
     border:1px solid rgb(221, 220, 220);
     border-radius: 15px;
     padding: 3px 10px 3px 10px;
+    -moz-user-select: none; -khtml-user-select: none;
+    user-select: none;
 
 }
 }
