--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  color: #fff;
   // background-image: url('../../assets/img/bg.jpg');
   // background-size: 100% 100%;
 	.title {
@@ -11,5 +12,35 @@
     // color: #fff;
     font-weight: normal;
     cursor: pointer;
+  }
+
+  .box {
+    padding: 100px 0;
+    width: 350px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .img {
+      width: 120px;
+      flex: 0 1 auto;
+      img {
+        width: 100%;
+      }
+    }
+    span {
+      width: 100%;
+      display: inline-block;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    #background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
   }
 }
